add_compile_options("/utf-8")
include(GoogleTest)

add_executable(test_SpamRgn rgn_unittest.cpp helper.cpp helper.h ${PROJECT_SOURCE_DIR}/spam/ui/proc/rgn.cpp ${PROJECT_SOURCE_DIR}/spam/ui/proc/basic.cpp)
add_executable(test_CVPerf cvperf_unittest.cpp helper.cpp helper.h)
add_executable(test_CVMatch cv_match_gtest.cpp helper.cpp helper.h)

target_link_libraries(test_CVMatch PRIVATE GTest::GTest GTest::Main)
gtest_discover_tests(test_CVMatch TEST_SUFFIX .noArgs TEST_LIST noArgsTests)

target_include_directories(test_SpamRgn PRIVATE ${CMAKE_BINARY_DIR}/include)
target_include_directories(test_CVPerf PRIVATE ${CMAKE_BINARY_DIR}/include)
target_include_directories(test_CVMatch PRIVATE ${CMAKE_BINARY_DIR}/include)

set_target_properties (test_SpamRgn PROPERTIES FOLDER unittest)
set_target_properties (test_CVPerf PROPERTIES FOLDER unittest)
set_target_properties (test_CVMatch PROPERTIES FOLDER unittest)

set(libs)
list(APPEND libs CAIRO::cairo)
list(APPEND libs CAIROMM::CAIROMM)
list(APPEND libs 2geom)
list(APPEND libs TBB::tbb TBB::tbbmalloc)
list(APPEND libs opencv_core)
list(APPEND libs opencv_imgcodecs)
list(APPEND libs Boost::filesystem)
list(APPEND libs Boost::thread)
list(APPEND libs Boost::locale)
list(APPEND libs Boost::system)
list(APPEND libs Freetype::Freetype)
list(APPEND libs Pixman::Pixman)
list(APPEND libs PNG::PNG)
list(APPEND libs JPEG::jpeg)
list(APPEND libs JPEG::turbo)
list(APPEND libs TIFF::TIFF)
list(APPEND libs FontConfig::FontConfig)
list(APPEND libs BZip2::BZip2)
list(APPEND libs EXPAT::EXPAT)
list(APPEND libs LIBLZMA::LIBLZMA)
list(APPEND libs Iconv::Iconv)
list(APPEND libs Iconv::charset)
list(APPEND libs "sigc-3.0")
list(APPEND libs GLIB::glib)
list(APPEND libs GLIB::gobject)
list(APPEND libs GSL::gsl)
list(APPEND libs GSL::gslcblas)
list(APPEND libs ASMLIB::ASMLIB)

target_link_libraries(test_SpamRgn PRIVATE ${libs})
target_link_libraries(test_CVPerf  PRIVATE ${libs})
target_link_libraries(test_CVMatch PRIVATE ${libs})

if(MSVC)
  target_compile_definitions(test_SpamRgn PRIVATE __AVX2__ _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS _CRT_SECURE_NO_WARNINGS _CRTDBG_MAP_ALLOC NOMINMAX VCL_NAMESPACE=vcl)
  target_compile_definitions(test_CVPerf PRIVATE __AVX2__ _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS _CRT_SECURE_NO_WARNINGS _CRTDBG_MAP_ALLOC NOMINMAX)
  target_compile_definitions(test_CVMatch PRIVATE __AVX2__ _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS _CRT_SECURE_NO_WARNINGS _CRTDBG_MAP_ALLOC NOMINMAX)
endif()

target_compile_options(test_SpamRgn PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP>)
target_compile_options(test_SpamRgn PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/arch:AVX2>)
target_compile_options(test_CVPerf PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP>)
target_compile_options(test_CVPerf PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/arch:AVX2>)
target_compile_options(test_CVMatch PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP>)
target_compile_options(test_CVMatch PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/arch:AVX2>)